opam-version: "2.0"
name: "opaqueness-plugin"
version: "0.1"
author: "octachron <octa@polychoron.fr>"
maintainer: "octachron <octa@polychoron.fr>"
homepage: "https://github.com/Octachron/morewarning"
bug-reports: "https://github.com/Octachron/morewarning/issues"
license: "lgpl-2+ocaml linking exception"
dev-repo: "git+https://github.com/Octachron/morewarning.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: []
